fix: corrections in register and login forms Unification of languages --> ONLY SPANISH Fonts changed for a new and a more professional design Correction of missaligned inputs

--- a/backend/static/css/styles.css
+++ b/backend/static/css/styles.css
@@ -1,7 +1,7 @@
 /* styles.css */
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,8 +15,10 @@ body {
     padding: 20px 40px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    width: 300px;
+    width: 450px;
+    max-width: 90%;
     text-align: center;
+    box-sizing: border-box
 }
 
 .form-container h2 {
@@ -27,11 +29,24 @@ body {
 .form-container form {
     display: flex;
     flex-direction: column;
+    gap: 15px;
+    text-align: left;
+}
+
+
+.form-container form button {
+    grid-column: span 2;
+}
+
+.form-container form label {
+    font-weight: bold;
+    color: #555;
 }
 
 .form-container form input {
+    width: 100%;
     padding: 10px;
-    margin: 8px 0;
+    margin-top: 5px;
     border: 1px solid #ddd;
     border-radius: 4px;
 }
@@ -44,6 +59,9 @@ body {
     border-radius: 4px;
     cursor: pointer;
     margin-top: 10px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 16px;
+
 }
 
 .form-container button:hover {
